--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ node_modules
 dist
 dist-ssr
 *.local
+# environment files
+.env
+.env.local
+.env.*.local
+
 
 # Editor directories and files
 .vscode/*
