--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.78.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "uuid": "^9.0.1"
